Fixed footer before social icons on mobile - make match the main style.

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -372,12 +372,8 @@
 /*********************************************************************************/
 /* Footer                                                                        */
 /*********************************************************************************/
-	
+
 	#footer
 	{
-		padding: 2em 0em 2em 0em;
+        margin: 0 !important;
 	}
-
-
-
-	
